@@ -46,6 +46,7 @@ Post-v2.11.0
    - Added support for TLS Server Name Indication (SNI).
    - Linux datapath:
      * Support for the kernel versions 4.19.x and 4.20.x.
+     * Support for the kernel version 5.0.x.
 
 
 v2.11.0 - 19 Feb 2019
